# ClaudeAgents

./: .gitignore  ADMIN_GUIDE.md  AGENT_DECISION_TREE.md  ARCHITECTURAL_ASSESSMENT.md  ARCHITECTURE_REVIEW.md  CLAUDE.md  CLAUDE_CODE_2_0_OVERVIEW.md  CLAUDE_MD_INTEGRATION.md  COMPETITIVE_COMPARISON_TABLE.md  COMPETITIVE_SUMMARY.md  CRITICAL_ASSESSMENT_SUMMARY.md  DEPLOYMENT_GUIDE.md  DEVELOPER_GUIDE.md  EXECUTIVE_SUMMARY.md  IMPLEMENTATION_EXAMPLE.py  MIGRATION_GUIDE.md  NEW_AGENTS_PROPOSAL.md  PROFESSIONAL_STANDARDS.md  PROJECT_ANALYSIS_SYSTEM.md  QUICK_START.md  README.md  REALITY_CHECK_COMPARISON.md  ROLLOUT_STRATEGY.md  ROLLOUT_VALIDATION_FRAMEWORK.md  SPRINT_14-15_EXECUTIVE_SUMMARY.md  STRATEGIC_ANALYSIS_INDEX.md  TECHNICAL_ARCHITECTURE.md  TECHNICAL_ARCHITECTURE_GUIDE.md  TODO-IMPROVEMENTS.md  TODO.md  The-Claude-Code-Agent-Manifesto.md  USAGE_OPTIMIZATION.md  USER_GUIDE.md  deploy-claude-2.0.sh  growth_hacker_debate_analysis.md  project_analysis_cache.db  pytest.ini  rollout_validation.py  sgconfig.yml
.ast-grep/: README.md  sgconfig.yml
.github/: PULL_REQUEST_TEMPLATE.md
agents/: 3d-modeler.md  AGENT_PROFESSIONAL_BEHAVIOR.md  AGENT_TEMPLATE.md  accessibility-expert.md  ace.md  agent-orchestrator.md  ai-integrator.md  ai-ml-engineer.md  api-builder.md  artist.md  audio-engineer.md  auth-engineer.md  ava-the-director.md  avi.md  backend-api-architect.md  backend-api-engineer.md  blockchain-web3-engineer.md  bob.md  bug-destroyer.md  build-master.md  business-analyst.md  chip-the-copilot.md  choreographer.md  cinematographer.md  claire.md  clara-the-clerk.md  claudine-codette.md  cloud-architect.md  code-architect.md  (+114 more)
orchestration/: Cargo.toml  Dockerfile  README.md  config.toml  docker-compose.yml
orchestration/benches/: orchestration_bench.rs
orchestration/k8s/: deployment.yaml
orchestration/migrations/: 001_initial_schema.sql
orchestration/src/: config.rs  error.rs  lib.rs  main.rs
orchestration/src/agents/: claude_agent_adapter.rs  integration.rs  mod.rs  registry.rs
orchestration/src/communication/: context_manager.rs  message_bus.rs  mod.rs  protocol.rs  types.rs  websocket_handler.rs
orchestration/src/monitoring/: metrics_collector.rs  mod.rs
orchestration/src/orchestration/: conflict_resolver.rs  coordinator.rs  engine.rs  mod.rs  resource_manager.rs  task_distributor.rs  types.rs
orchestration/src/persistence/: migrations.rs  mod.rs  repositories.rs  state_store.rs
orchestration/tests/: integration_tests.rs
(+500 files in other folders)
