[package]
name = "claude-orchestration"
version = "0.1.0"
edition = "2021"
authors = ["Claude Orchestration Team"]
description = "High-performance multi-agent orchestration engine"
license = "MIT"
repository = "https://github.com/anthropic/claude-orchestration"

[dependencies]
# Async runtime and core utilities
tokio = { version = "1.40", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"
async-trait = "0.1"

# Serialization and data handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Networking and communication
axum = "0.7"
axum-extra = { version = "0.9", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace", "compression"] }
hyper = "1.4"
reqwest = { version = "0.12", features = ["json", "stream"] }

# Message queues and caching
redis = { version = "0.26", features = ["tokio-comp", "cluster-async"] }
lapin = "2.3"
rdkafka = { version = "0.36", features = ["cmake-build"] }

# Database and persistence
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid", "json"] }
sea-orm = { version = "1.0", features = ["sqlx-postgres", "runtime-tokio-native-tls"] }

# Monitoring and observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
opentelemetry = "0.24"
opentelemetry-otlp = "0.17"
metrics = "0.23"
metrics-exporter-prometheus = "0.15"

# Configuration and environment
config = "0.14"
dotenvy = "0.15"
clap = { version = "4.5", features = ["derive"] }

# Error handling and utilities
anyhow = "1.0"
thiserror = "1.0"
once_cell = "1.19"
parking_lot = "0.12"
dashmap = "6.1"

# Performance and optimization
rayon = "1.10"
crossbeam = "0.8"
flume = "0.11"
lru = "0.12"
ahash = "0.8"

# Security and validation
jsonwebtoken = "9.3"
argon2 = "0.5"
validator = { version = "0.18", features = ["derive"] }

# Testing and development
[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.5"
wiremock = "0.6"
testcontainers = "0.22"

[[bench]]
name = "orchestration_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
debug = true